web app description

--- a/thebestclient/style.css
+++ b/thebestclient/style.css
@@ -17,7 +17,7 @@
   --success: #00ff88;
   
   /* Background Colors */
-  --bg-primary: #0a0e27;
+  --bg-primary: #272729;
   --bg-secondary: #12182e;
   --bg-tertiary: #1a2238;
   --bg-elevated: #222d45;
